--- a/front/public/style/app.css
+++ b/front/public/style/app.css
@@ -1,5 +1,37 @@
 
+body {
+    margin: 0px;
+    background-color: #FFFEF3;
+    font-family: Impact, 'メイリオ', 'Arial Narrow Bold', sans-serif;
+}
+
+.logo {
+    position: absolute;
+    top: 0px;
+    left: 80px;
+}
+
+.menu {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 50px;
+    height: 100%;
+    background-color: rgba(0,0,0,0.7);
+    z-index: 99999;
+}
+
+.menuBar-enter-active, .menuBar-leave-active {
+    transform: translateX(200);
+    transition: transform 200ms cubic-bezier(1,1,.99,.99) 0ms;
+}
+.menuBar-enter, .menuBar-leave-to {
+    transform: scale(5.0, 1.0);
+    transition: transform 200ms cubic-bezier(1,1,.99,.99) 0ms;
+}
+
 .map{
     width: 100%;
     height: 600px;
+    left: 50px;
 }
