--- a/front/public/style/app.css
+++ b/front/public/style/app.css
@@ -5,6 +5,17 @@ body {
     font-family: Impact, 'メイリオ', 'Arial Narrow Bold', sans-serif;
 }
 
+a.white:link {
+    color: white;
+}
+a.white:hover {
+    text-decoration: underline;
+    color: white;
+}
+a.white:visited {
+    color: white;
+}
+
 .logo {
     position: absolute;
     top: 0px;
@@ -18,20 +29,85 @@ body {
     width: 50px;
     height: 100%;
     background-color: rgba(0,0,0,0.7);
-    z-index: 99999;
+    z-index: 10000;
 }
 
-.menuBar-enter-active, .menuBar-leave-active {
-    transform: translateX(200);
-    transition: transform 200ms cubic-bezier(1,1,.99,.99) 0ms;
+.menuItem{
+    color: white;
+    z-index: 10010;
+    margin-top: 50px;
 }
-.menuBar-enter, .menuBar-leave-to {
-    transform: scale(5.0, 1.0);
-    transition: transform 200ms cubic-bezier(1,1,.99,.99) 0ms;
+
+.menuSep{
+    width: 80%;
 }
 
 .map{
     width: 95%;
     height: 600px;
     left: 50px;
+}
+
+/* Dropdown Button */
+.dropbtn {
+  background-color: #4CAF50;
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+}
+
+/* Dropdown button on hover & focus */
+.dropbtn:hover, .dropbtn:focus {
+  background-color: #3e8e41;
+}
+
+/* The search field */
+#satSearchText {
+  box-sizing: border-box;
+  background-image: url('icon_search.png');
+  background-position: 14px 12px;
+  background-repeat: no-repeat;
+  font-size: 16px;
+  padding: 14px 20px 12px 45px;
+  border: none;
+  border-bottom: 1px solid #ddd;
+}
+
+/* The search field when it gets focus/clicked on */
+#myInput:focus {outline: 3px solid #ddd;}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f6f6f6;
+  min-width: 230px;
+  border: 1px solid #ddd;
+  z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {
+    background-color: #f1f1f1
+}
+
+/* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
+.show {
+    display:block;
 }
