--- a/front/public/style/app.css
+++ b/front/public/style/app.css
@@ -115,3 +115,9 @@ a.white:visited {
 .show {
     display:block;
 }
+
+.sal-sat-list {
+    height: 500px;
+    overflow-y: scroll;
+    position: relative;
+}
